# RTMPPush

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vam/vpusher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  SafeQueue.cpp  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/vam/vpusher/: LivePusher.java  MainActivity.kt
app/src/main/java/com/vam/vpusher/media/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vam/vpusher/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
